# wavemap

./: .coveragerc  .travis.yml  CHANGELOG  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  wavemap.py
test/: files.py  test_canonical.py  test_convert.py  test_docs.py  test_expected.py  test_read.py  test_vs_ffmpeg.py  test_wavemap.py  test_write.py
wavemap/: __init__.py  constants.py  convert.py  docs.py  layout.py  memmap.py  raw.py  read.py  write.py
wavemap/structure/: __init__.py  structure.py  wave.py
