[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.doks]
auto = true
source = 'wavemap/__init__.py'

[tool.poetry]
name = "wavemap"
version = "2.0.1"
description = "🌊 Memory map WAVE or raw audio files 🌊"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
