[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']

[tool.doks]
auto = true
source = 'wavemap/__init__.py'

[tool.poetry]
name = "wavemap"
version = "2.0.1"
description = "🌊 Memory map WAVE or raw audio files 🌊"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.1"
xmod = "^1.3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
stroll = "^1.1.0"
tdir = "^1.4.1"


[tool.coverage]
[tool.coverage.run]
branch = "True"
source = "wavemap"

[tool.coverage.report]
fail_under = "68"
skip_covered = "True"
exclude_lines = ["", "pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
