[project]
name = "wavemap"
version = "2.0.1"
description = "🌊 Memory map WAVE or raw audio files 🌊"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = [
    "numpy>=1.24.1,<2",
    "xmod>=1.3.2,<2",
]

[tool.doks]
auto = true
source = 'wavemap/__init__.py'

[dependency-groups]
dev = [
    "coverage>=7.1.0,<8",
    "pytest>=7.2.1,<8",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.14",
    "stroll>=1.1.0,<2",
    "tdir>=1.4.1,<2",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
[tool.coverage.run]
branch = true
source = "wavemap"

[tool.coverage.report]
fail_under = "68"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

